argoproj/jumia-backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx-backend
  name: nginx-backend
  namespace: microservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-backend
  strategy: 
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-backend
    spec:
      containers:
      - image: scinet0786/devchebackend:latest
        name: devchebackend
