argoproj/jumia-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx
  namespace: microservice
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nginx
  strategy: 
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
    spec:
      containers:
      - image: scinet0786/devchefrontend:latest
        name: devchefrontend
        resources: {}
status: {}
