argoproj/jumia-deployment-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: jumia-service-deployment
  namespace: microservice
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
    nodePort: 32002
