argoproj/jumia-deployment-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jumia-application-ingress
  namespace: microservice
  labels:
    app: nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts: 
    - home.apikongapp.uml
    - services.apikongapp.ml
    secretName: cluster-issuer-secret-key 
  rules:
    - host: home.apikongapp.ml
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
             service:
               name: jumia-service-deployment
               port:
                 number: 8081
    - host: services.apikongapp.ml
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
             service:
               name: jumia-service-deployment
               port:
                 number: 8080
